# devmail

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.linux-build  Dockerfile.test  README.md  build.sh
assets/: index.html
src/: config.rs  main.rs  mime.rs  model.rs  store.rs
src/http/: api.rs  mod.rs  server.rs
src/smtp/: mod.rs  parser.rs  server.rs  session.rs
test/: entrypoint.sh  gen-test-emails.sh
